--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		  package="org.tamanegi.quicksharemail"
-		  android:versionCode="5"
-		  android:versionName="0.2.1">
+		  android:versionCode="6"
+		  android:versionName="0.2.2">
 
   <uses-sdk android:minSdkVersion="4" />
 
@@ -16,6 +16,11 @@
 			  android:excludeFromRecents="true">
 	  <intent-filter android:label="@string/app_name">
 		<action android:name="android.intent.action.SEND" />
+		<data android:mimeType="*/*" />
+		<category android:name="android.intent.category.DEFAULT" />
+	  </intent-filter>
+	  <intent-filter android:label="@string/app_name">
+		<action android:name="android.intent.action.SEND_MULTIPLE" />
 		<data android:mimeType="*/*" />
 		<category android:name="android.intent.category.DEFAULT" />
 	  </intent-filter>
